Ajout Adapter affiche tradi + searchview

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Tradi_P"
         tools:targetApi="31">
-
+        <activity
+            android:name=".DetailTradiPraticien"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".serge.MesDispo"
             android:exported="false">
@@ -47,13 +53,10 @@
         <activity
             android:name=".serge.conn_tradi_1"
             android:exported="true">
-
-
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".chat.ChatActivity"
             android:exported="false">
@@ -75,7 +78,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".loginuser.UhomeActivity"
             android:exported="false">
@@ -83,7 +85,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".tlogin.HomeActivity"
             android:exported="false">
@@ -120,9 +121,15 @@
                 android:value="" />
         </activity>
         <activity
+            android:name=".loginuser.DetailTradiPraticien"
+            android:exported="true">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
